// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`call.4gl 1`] = `
main 

  call fgl_winmessage()

  call fgl_winmessage("p1")




  call fgl_winmessage("p1","p2", "p3")
  call fgl_winmessage(1,2,    3)

end main

function f1() 

  call fgl_winmessage() returning var1

  call fgl_winmessage() returning var1 , var2

call fgl_winmessage() returning var1,var2,var3

end function

function f2() 

  call fgl_winmessage() returning var1[ind1]

end function

function f3() 

  call fgl_winmessage() returning rec1.var1

  call fgl_winmessage() returning rec1.*

end function

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  {
    "kind": "program",
    "value": []
  }
]
`;

exports[`define.4gl 1`] = `
MAIN 

	DEFINE VAR1 BIGINT   
	DEFINE VAR1 BYTE   
	DEFINE VAR1 CHAR(100)
	DEFINE VAR1 CHARACTER  
	DEFINE VAR1 DATE   
	DEFINE VAR1 DATETIME  day to day
	DEFINE VAR1 DEC   
	DEFINE VAR1 DECIMAL(10,2)
	DEFINE VAR1 DECIMAL(10)
	DEFINE VAR1 DOUBLE PRECISION  
	DEFINE VAR1 DYNAMIC ARRAY  
	DEFINE VAR1 FLOAT  
	DEFINE VAR1 INT  
	DEFINE VAR1 INTEGER  
	DEFINE VAR1 MONEY  
	DEFINE VAR1 NCHAR(100)  
	DEFINE VAR1 NUMERIC  
	DEFINE VAR1 NVARCHAR(100)  

end MAIN

function f1() 
	--DEFINE VAR1 INTERVAL  
end function

function f2() 
	DEFINE REC1 RECORD
    VAR1 BIGINT
  END RECORD

	DEFINE REC2 RECORD
    VAR1 CHAR(100),
    VAR1 CHARACTER,
    VAR1 DATE,
    VAR1 DATETIME  day to day,
    VAR1 DEC,
    VAR1 DECIMAL(10,2),
    VAR1 DECIMAL(10),
    VAR1 DOUBLE PRECISION,
    VAR1 FLOAT,
    VAR1 INT,
    VAR1 INTEGER,
    VAR1 MONEY,
    VAR1 NCHAR(100),
    VAR1 NUMERIC,
    VAR1 NVARCHAR(100)
  END RECORD  

end function

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  {
    "kind": "program",
    "value": []
  }
]
`;

exports[`define2.4gl 1`] = `
main 
	--DEFINE VAR1 record LIKE TAB1.*
end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  {
    "kind": "program",
    "value": []
  }
]
`;

exports[`function.4gl 1`] = `
main
   
end main

function f0()
   
end function

function f1(p1)
   
end function

function f2(p1, p2)
   
end function
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  {
    "kind": "program",
    "value": []
  }
]
`;
